# crypto-arb-scanner

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/core/: config.py  symbols.py
app/exchanges/: base.py  binance.py  hyperliquid.py  lighter.py  okx.py
app/execution_adapters/: __init__.py  base.py  binance_live.py  binance_rules.py  paper.py  registry.py  stubs.py
app/models/: data_quality.py  execution.py  market.py  observation.py
app/services/: alert_memory.py  arbitrage_scanner.py  binance_pilot.py  (+21 more)
crypto_arb_scanner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: execution_venue_reality_check.md
tests/: test_binance_funding_time.py  test_binance_live_adapter.py  test_binance_pilot_readiness.py  test_dashboard_and_alerts.py  test_data_quality_gate.py  test_execution_account_state_gate.py  test_execution_account_state_provider.py  test_execution_adapter_stubs.py  test_execution_credential_readiness.py  test_execution_dry_run_submit.py  test_execution_intents.py  test_execution_policy.py  test_execution_preflight.py  test_execution_preparation_api.py  test_execution_sizing_policy_builder.py  test_guarded_live_submit.py  test_lighter_ssl.py  test_live_execution_entry.py  test_meta_api.py  test_observations_api.py  test_observations_schema_guard.py  test_opportunities_api.py  test_opportunities_readonly_api.py  test_opportunity_replay.py  test_paper_execution_adapter.py  test_replay_preview_api.py  test_research_summary_api.py  test_snapshots_api.py  test_symbols.py  test_venue_capabilities_api.py  test_venue_registry.py
(+4 files in other folders)
